# idris-grin

./: .gitignore  .gitpod.yml  .travis.yaml  .travis.yml  Dockerfile  LICENSE  README.md  default.nix  idris-grin.cabal  prim_ops.c  prim_ops.h  runtime.c  stack.yaml  test_prim_ops  test_prim_ops.c
Idris/: CodegenGrin.hs
app/: IdrisGrin.hs
src/Idris/: CodegenGrin.hs  EvalPrimOp.hs  PrimOps.hs
test/: GrinFFI.ibc  Hello  Hello.ibc  HelloWorld.ibc  IdrisDevSpec.hs  IdrisSpec.hs
test/Test/Hspec/: IdrisFrontend.hs  IdrisGrinBackend.hs
test/experiments/counting-immutable-beans/: Main.idr  Main.ipkg
test/idris-dev/: out.cat
test/idris-dev/basic021/: basic021.idr
test/idris-dev/buffer001/: buffer001.idr
test/idris-dev/contrib001/: contrib001.idr
test/idris-dev/dsl002/: test014.idr
test/idris-dev/views003/: views003.idr
test/other/: Hello.grin  Hello_opt.grin
test/tdd/chapter01/: 01_HelloWorld_opt.grin  02_CalcType.grin  02_CalcType.idr  02_CalcType_opt.grin  HelloWorld.grin
test/tdd/chapter02/: 01_Average.grin  01_Average.idr  01_Average_opt.grin  02_Average.grin  02_Average.idr  02_Average_opt.grin  03_Prelude.grin  03_Prelude.idr  03_Prelude_opt.grin
test/tdd/chapter03/: 01_Matrix.grin  01_Matrix.idr  01_Matrix_opt.grin
test/tdd/chapter04/: 01_DataTypes.idr  02_DataStore.idr
test/tdd/chapter05/: 01_IOIntro.idr
test/tdd/chapter06/: 01TypeLevelFuns.idr  02_DataStore.idr
test/tdd/chapter07/: 01_Interfaces.idr  02_Expr.idr
test/tdd/chapter08/: 01_ExactLength.idr  02_Reverse.idr
test/tdd/chapter09/: 01_RemoveElem.idr  02_Game.idr
test/tdd/chapter10/: 01_Exercises.idr  01_View.idr  02_Exercises.idr  02_RecursiveViews.idr
test/tdd/chapter11/: 01_Exercises.idr  01_Inf.idr  01_Quiz.idr  01_ShiftTest.idr  01_SumSimple.idr  01_SumSimple2.idr  02_Exercise.idr  02_InfiniteProcesses.idr  02_TotalArithQuiz.idr  02_TotalArithQuizTest.idr  03_ArithCmd.idr  03_ArithCmdDo.idr  03_ArithCmdDoTest.idr  03_Exercise.idr  03_ExerciseTest.idr  03_Termination.idr  03_TerminationTest.idr  TODO
test/tdd/chapter12/: 01_TreeLabel.idr  02_State.idr  03_TreeLabelWith.idr  04_Exercise01.idr  05_TreeLabelType.idr  06_ArithState.idr
test/zurihac/: 01_WordPrimOps.idr  02_Double.idr  03_wordPrimOps.idr
